[lib]
# crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
base64 = []
random = ["rand"]
std = ["random"]
crypto = ["base64", "random"]
sys_info = ["winapi", "cc", "libc", "serde", "windows"]
dns = ["cfg-if", "socket2", "libc", "winapi"]
traceroute = ["pnet", "rand", "async-std", "dns", "libc", "windows"]

[dependencies]
rand = { version = "0.8.4", optional = true, features = ["small_rng"] }
libc = { version = "0.2.29", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
cfg-if = { version = "^1.0", optional = true }
socket2 = { version = "^0.4", optional = true }
pnet = { version = "0.30.0", optional = true }
async-std = { version = "1.9.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [
    "windef",
    "ws2def",
    "ws2tcpip",
    "minwindef",
    "ntdef",
    "ntstatus",
    "sysinfoapi",
    "winnt",
    "winuser",
    "libloaderapi",
    "processthreadsapi",
    "winerror",
    "winreg",
], default-features = false, optional = true }
windows = { version = "0.30.0", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
], optional = true }

[build-dependencies]
cc = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
[dev-dependencies]

[[example]]
name = "std"
required-features = ["std"]
[[example]]
name = "base64"
required-features = ["base64"]
[[example]]
name = "random"
required-features = ["random"]
[[example]]
name = "sys_info"
path = "examples/sys_info.rs"
required-features = ["sys_info"]
[[example]]
path = "examples/dns.rs"
name = "dns"
required-features = ["dns"]
[[example]]
path = "examples/traceroute.rs"
name = "traceroute"
required-features = ["traceroute"]

[package]
name = "e-utils"
version = "0.1.0"
edition = "2021"
authors = ["Eternal <EternalNight996@gmail.com, EternalNightYeah2@yeah.net>"]
description = "a rust utils"
license-file = "GNU-LICENSE"
repository = "https://github.com/EternalNight996/e-utils"
include = ["**/*.rs", "Cargo.toml"]
keywords = [
    "sys",
    "info",
    "tools",
    "utils",
    "traceroute",
    "tracert",
    "dns",
    "base64",
    "random",
    "nanoid",
    "color",
]
categories = ["utils", "tools", "sys-info", "random", "encode", "decode"]
rust-version = "1.62.0"
build = "./build.rs"
links = "links"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
