[lib]
# crate-type = ["cdylib", "rlib"]

[features]
default = ["full"]
full = ["std", "sys_info", "dns", "traceroute", "base64"]
base64 = []
random = ["rand"]
std = ["random"]
crypto = ["base64", "random"]
sys_info = ["winapi", "cc", "libc", "serde", "windows"]
dns = ["cfg-if", "socket2", "libc", "winapi"]
traceroute = ["pnet", "rand", "async-std", "dns", "libc", "windows"]

[dependencies]
rand = { version = "0.8.4", optional = true, features = ["small_rng"] }
libc = { version = "0.2.29", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
cfg-if = { version = "^1.0", optional = true }
socket2 = { version = "^0.4", optional = true }
pnet = { version = "0.30.0", optional = true }
async-std = { version = "1.9.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [
    "windef",
    "ws2def",
    "ws2tcpip",
    "minwindef",
    "ntdef",
    "ntstatus",
    "sysinfoapi",
    "winnt",
    "winuser",
    "libloaderapi",
    "processthreadsapi",
    "winerror",
    "winreg",
], default-features = false, optional = true }
windows = { version = "0.30.0", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
], optional = true }

[build-dependencies]
cc = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
[dev-dependencies]

[[example]]
name = "std"
path = "examples/std.rs"
required-features = ["std"]

[[example]]
name = "base64"
path = "examples/base64.rs"
required-features = ["base64"]

[[example]]
name = "random"
path = "examples/random.rs"
required-features = ["random"]

[[example]]
name = "info"
path = "examples/info.rs"
required-features = ["sys_info"]

[[example]]
name = "dns"
path = "examples/dns.rs"
required-features = ["dns"]

[[example]]
name = "traceroute"
path = "examples/traceroute.rs"
required-features = ["traceroute"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
rustdoc-args = ["--cfg", "docsrs"]
# all-features = true

[package]
name = "e-utils"
version = "0.1.11"
edition = "2021"
authors = ["Eternal <EternalNight996@gmail.com, EternalNightYeah2@yeah.net>"]
description = "a rust utils"
license-file = "GNU-LICENSE"
readme = "README.md"
documentation = "https://docs.rs/e-utils"
homepage = "https://github.com/EternalNight996"
repository = "https://github.com/EternalNight996/e-utils"
include = ["src/", "c/", "test/", "*.md", "*-LICENSE", "build.rs", "Cargo.toml"]
keywords = ["utils", "info", "tools", "e-utils", "e-"]
categories = [
    "development-tools::cargo-plugins",
    "network-programming",
    "command-line-utilities",
    "asynchronous",
]
rust-version = "1.62.0"
build = "./build.rs"
links = "links"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
